--- a/Zypher/appsettings.json
+++ b/Zypher/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; port=9906; database=zypher; user=root; password=htlkrems; Persist Security Info=False; Connect Timeout=300"
+  }
 }
