--- a/Zypher/appsettings.json
+++ b/Zypher/appsettings.json
@@ -10,8 +10,7 @@
     "DefaultConnection": "server=localhost; port=9906; database=zypher; user=root; password=htlkrems; Persist Security Info=False; Connect Timeout=300"
   },
   "TextApis": {
-    "RandomWords": "https://random-word-api.herokuapp.com/word?number=20",
+    "RandomWords": "https://random-word-api.vercel.app/api?words=20",
     "RandomBookQuote": "https://recite-production.up.railway.app/api/v1/random",
-    
   }
 }
