--- a/Zypher/Zypher.csproj
+++ b/Zypher/Zypher.csproj
@@ -77,6 +77,7 @@
       <None Update="Components\Pages\SelectMode.razor.css">
         <DependentUpon>SelectMode.razor</DependentUpon>
       </None>
+      <None Include="wwwroot\rocket.png" />
     </ItemGroup>
 
 </Project>
